--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.2",
     "babel-plugin-macros": "^3.1.0",
+    "encoding": "^0.1.13",
     "firebase": "^10.7.1",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
